# trigger_beforest_data

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  convex.json  coolify.json  docker-compose.yml  nixpacks.toml  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.tsbuildinfo
beforest_data/: 10percent.beforest.co.md  beforest.co.md  bewild.life.md  experiences.beforest.co.md  hospitality.beforest.co.md
convex/: chat.ts  schema.ts
references/: project-plan.md
scripts/: add-knowledge.ts  crawl_sitemaps_to_convex.py  scrape-beforest.ts  sync_beforest_data_to_convex.py  sync_openai_embeddings.py
src/api/: main.py
src/app/: layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/health/: route.ts
src/app/api/knowledge/: route.ts
src/crewai_manychat/: convex_client.py  crew.py  llm.py  tools.py
src/lib/: llm.ts
src/types/: index.ts
