name = "crewai-manychat"
version = "0.1.0"
description = "ManyChat integration with CrewAI using MiniMax LLM"
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.10.0",
    "langchain-openai>=0.0.0",
    "langchain-community>=0.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.0",
    "convex>=0.7.0",
    "requests>=2.31.0",
    "litellm>=1.51.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
